<resources>
    <string name="app_name">ShourtCut</string>

    <string name="shortcut_short_label1">shortcut_short_label1</string>
    <string name="shortcut_long_label1">shortcut_long_label1</string>
    <string name="shortcut_disable_label1">shortcut_disable_label1</string>
    <string name="shortcut_short_label2">shortcut_short_label2</string>
    <string name="shortcut_long_label2">shortcut_long_label2</string>
    <string name="shortcut_disable_label2">shortcut_disable_label2</string>
</resources>
